<resources>
    <string name="app_name">Life Saver</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="web">web</string>
    <string name="video">video</string>
    <string name="warning">warning</string>
    <string name="emergecny">emergency</string>
    <string name="username">USERNAME(Email)</string>
    <string name="password">PASSWORD</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="number">Number</string>
    <string name="long_press_on_above_fields_to_update">Long Press on above fields to update</string>

    <string name="emergency_contact_number">Emergency contact number</string>

    <string name="submit">Submit</string>

    <string name="title">Title</string>
    <string name="version">Version</string>
    <string name="enter_here">Enter Here</string>
</resources>
