<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/gradient1">


    <TextView

        android:id="@+id/eemail"
        android:layout_width="220dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:hint="@string/email"
        android:textStyle="bold"
        android:gravity="center"
        android:drawableStart="@drawable/ic_email_black_24dp" />


        <TextView
            android:id="@+id/name"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:drawableLeft="@drawable/name"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:hint="@string/name"
            android:textStyle="bold"
            android:gravity="center"
            android:drawableStart="@drawable/name" />


        <TextView
            android:id="@+id/age"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:drawableLeft="@drawable/ages"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:textStyle="bold"
            android:hint="@string/age"
            android:gravity="center"
            android:drawableStart="@drawable/ages" />


        <TextView
            android:id="@+id/numm"
            android:layout_width="220dp"
            android:layout_height="30dp"
            android:drawableLeft="@drawable/call"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="250dp"
            android:hint="@string/number"
            android:textStyle="bold"
            android:gravity="center"
            android:drawableStart="@drawable/call" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="165dp"
        android:text="@string/long_press_on_above_fields_to_update"
        android:typeface="serif" />


</RelativeLayout>